--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 file.reference.Documents-Elokuvakirjasto=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.Documents-Elokuvakirjasto}
+start.file=web/index.html
+web.context.root=/Elokuvakirjasto
